[package]
name = "smallvec-stableunion"
version = "0.6.10"
authors = ["Simon Sapin <simon.sapin@exyr.org>",
           "Quinten Kock <quintenkock@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/rust-smallvec"
description = "Fork of the crate smallvec. Uses unions in stable rust. Please note that it can only store Copy types. No functional differences apart from that."
keywords = ["small", "vec", "vector", "stack", "no_std"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://doc.servo.org/smallvec/"

[features]
std = []
union = []
default = ["std"]
specialization = []
may_dangle = []

[lib]
name = "smallvec_stableunion"
path = "lib.rs"

[dependencies]
serde = { version = "1", optional = true }

[dev_dependencies]
bincode = "1.0.1"
